# Tiny_Twin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flops.sh  setup-tinytwin.md  ue_ip.txt
channel/: generate.py
ci-scripts/conf_files/: nrue.uicc.conf
ci-scripts/yaml_files/5g_rfsimulator/: docker-compose.yaml
cmake_targets/: nrue.uicc.conf
common/config/: config_load_configmodule.c
common/utils/LOG/: log.c
docker/: Dockerfile.base.ubuntu22  Dockerfile.build.ubuntu22  Dockerfile.gNB.ubuntu22  Dockerfile.nrUE.ubuntu22
docker/tinytwin/: Dockerfile-edgeric  Dockerfile.TTgNB.ubuntu22  Dockerfile.TTnrUE.ubuntu22
executables/: generate_random_channel.py  nr-softmodem.c  nr-ue.c  nr-uesoftmodem.c
executables/edgeric/: CMakeLists.txt  edgeric.cpp  edgeric.h  wrapper.cpp  wrapper.h
logs/: conv.txt  log_10taps.txt  log_dl.txt  samp.txt  snr.txt  tti.ipynb  tti.txt  tti_12tap.txt  tti_15tap.txt  tti_1tap.txt  tti_3tap.txt
openair1/PHY/NR_UE_TRANSPORT/: csi_rx.c
openair2/LAYER2/NR_MAC_UE/: nr_ue_procedures.c
openair2/LAYER2/NR_MAC_gNB/: gNB_scheduler_dlsch.c  gNB_scheduler_primitives.c  gNB_scheduler_uci.c  gNB_scheduler_ulsch.c  mac_proto.h
radio/rfsimulator/: apply_channelmod.c  rfsimulator.h  simulator.c
sims/mimo/: docker-compose.yaml
sims/oai-cn/: docker-compose.yaml
sims/oai-cn/conf/: users.conf
sims/oai-cn/database/: oai_db.sql
sims/oai-cn/healthscripts/: mysql-healthcheck.sh
sims/siso/: docker-compose.yaml
sims/traffic/: dl_1ue.sh  traffic_1ue.sh
z_docs/: docker-tinytwin.md  edgeric-documentation.md  logging.md  metal-tinytwin.md
(+1549 files in other folders)
